--- a/spring-cloud-config-client.properties
+++ b/spring-cloud-config-client.properties
@@ -1,3 +1,3 @@
 loadtarget.host = http://localhost:8086
-configuration.masterhub.enabled = false
+configuration.masterhub.enabled = true
 configuration.masterhub.kafka.enabled = true
